@@ -5,7 +5,9 @@ import javafx.beans.property.StringProperty;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 public class DatabaseConnectionProperties {
 
@@ -19,23 +21,36 @@ public class DatabaseConnectionProperties {
   public static final String HOST = "{host}";
   public static final String PORT = "{port}";
   public static final String DB_NAME = "{dbName}";
-  public static final Map<String, DatabaseProperties> dbTypes = new TreeMap<>(Map.of(
-          "MS Access",
-          new DatabaseProperties("access",
-                                 "",
-                                 "jdbc:" + PRODUCT + ":D:\\Projekte\\SIARD2\\JdbcAccess\\testfiles\\dbfile.mdb"),
-          "DB/2",
-          new DatabaseProperties("db2", "50000", "jdbc:" + PRODUCT + ":" + HOST + ":" + PORT + "/" + DB_NAME),
-          "MySQL",
-          new DatabaseProperties("mysql", "3306", "jdbc:" + PRODUCT + "://" + HOST + ":" + PORT + "/" + DB_NAME),
-          "Oracle",
-          new DatabaseProperties("oracle", "1521", "jdbc:" + PRODUCT + ":thin:@" + HOST + ":" + PORT + ":" + DB_NAME),
-          "PostgreSQL",
-          new DatabaseProperties("postgresql", "5432", "jdbc:" + PRODUCT + "://" + HOST + ":" + PORT + "/" + DB_NAME),
-          "Microsoft SQL Server",
-          new DatabaseProperties("sqlserver",
-                                 "1433",
-                                 "jdbc:" + PRODUCT + "://" + HOST + ":" + PORT + ";databaseName=" + DB_NAME)));
+
+  public static final Map<String, DatabaseProperties> dbTypes;
+
+  static {
+    Map<String, DatabaseProperties> stringDatabasePropertiesMap = new java.util.HashMap<>();
+    stringDatabasePropertiesMap.put("MS Access", new DatabaseProperties("access",
+                                                                        "",
+                                                                        "jdbc:" + PRODUCT + ":D:\\Projekte\\SIARD2\\JdbcAccess\\testfiles\\dbfile.mdb"));
+    stringDatabasePropertiesMap.put("DB/2",
+                                    new DatabaseProperties("db2",
+                                                           "50000",
+                                                           "jdbc:" + PRODUCT + ":" + HOST + ":" + PORT + "/" + DB_NAME));
+    stringDatabasePropertiesMap.put("MySQL",
+                                    new DatabaseProperties("mysql",
+                                                           "3306",
+                                                           "jdbc:" + PRODUCT + "://" + HOST + ":" + PORT + "/" + DB_NAME));
+    stringDatabasePropertiesMap.put("Oracle",
+                                    new DatabaseProperties("oracle",
+                                                           "1521",
+                                                           "jdbc:" + PRODUCT + ":thin:@" + HOST + ":" + PORT + ":" + DB_NAME));
+    stringDatabasePropertiesMap.put("PostgreSQL",
+                                    new DatabaseProperties("postgresql",
+                                                           "5432",
+                                                           "jdbc:" + PRODUCT + "://" + HOST + ":" + PORT + "/" + DB_NAME));
+    stringDatabasePropertiesMap.put("Microsoft SQL Server", new DatabaseProperties("sqlserver",
+                                                                                   "1433",
+                                                                                   "jdbc:" + PRODUCT + "://" + HOST + ":" + PORT + ";databaseName=" + DB_NAME));
+    dbTypes = new TreeMap<>(
+            stringDatabasePropertiesMap);
+  }
 
 
   public DatabaseConnectionProperties() {}
@@ -45,7 +60,7 @@ public class DatabaseConnectionProperties {
   }
 
   public List<String> getDatabaseTypes() {
-    return dbTypes.keySet().stream().toList();
+    return dbTypes.keySet().stream().collect(Collectors.toList());
   }
 
   public StringProperty getDatabaseProduct() {
@@ -85,6 +100,51 @@ public class DatabaseConnectionProperties {
     return this.password;
   }
 
-  public record DatabaseProperties(String product, String port, String defaultUrl) {
-  }
+  public static final class DatabaseProperties {
+    private final String product;
+    private final String port;
+    private final String defaultUrl;
+
+    public DatabaseProperties(String product, String port, String defaultUrl) {
+      this.product = product;
+      this.port = port;
+      this.defaultUrl = defaultUrl;
+    }
+
+    public String product() {
+      return product;
+    }
+
+    public String port() {
+      return port;
+    }
+
+    public String defaultUrl() {
+      return defaultUrl;
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+      if (obj == this) return true;
+      if (obj == null || obj.getClass() != this.getClass()) return false;
+      DatabaseProperties that = (DatabaseProperties) obj;
+      return Objects.equals(this.product, that.product) &&
+              Objects.equals(this.port, that.port) &&
+              Objects.equals(this.defaultUrl, that.defaultUrl);
+    }
+
+    @Override
+    public int hashCode() {
+      return Objects.hash(product, port, defaultUrl);
+    }
+
+    @Override
+    public String toString() {
+      return "DatabaseProperties[" +
+              "product=" + product + ", " +
+              "port=" + port + ", " +
+              "defaultUrl=" + defaultUrl + ']';
+    }
+
+    }
 }
