@@ -125,14 +125,17 @@ public class DatabaseSchema extends DatabaseObject {
             nodeIds.add("description");
         }
         if (nodeIds.size() > 0) {
-            hits = new TreeSet<>(List.of(new MetaSearchHit("Schema " + name, this, treeContentView, nodeIds)));
+            List<MetaSearchHit> metaSearchHits = new ArrayList<>();
+            metaSearchHits.add(new MetaSearchHit("Schema " + name, this, treeContentView, nodeIds));
+            hits = new TreeSet<>(
+                    metaSearchHits);
         }
         return hits;
     }
 
     protected TreeSet<MetaSearchHit> aggregatedMetaSearch(String s) {
         final TreeSet<MetaSearchHit> hits = metaSearch(s);
-        hits.addAll(tables.stream().flatMap(table -> table.aggregatedMetaSearch(s).stream()).toList());
+        hits.addAll(tables.stream().flatMap(table -> table.aggregatedMetaSearch(s).stream()).collect(Collectors.toList()));
         return hits;
     }
 
